--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/applicationinsights-web": "^3.3.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
